@@ -38,6 +38,8 @@ Upcoming release: BINARY COMPATIBLE
   constant seL4_GlobalsFrame from libsel4 as well as the IPC buffer in GlobalsFrame caveat from CAVEATS-generic.md
 * Implement KernelArmExportPTMRUser and KernelArmExportVTMRUser options for Arm generic timer use access on aarch32.
 * Removed obsolete define `HAVE_AUTOCONF`
+* The value for 'Entry_VMExit' has changed. This make the values in the benchmark/tracking enum 'entry_type_t'
+  unique across all architectures to avoid ambiguity.
 
 ## Upgrade Notes
 ---
